crates/formatter/tests/snapshots/snapshots__synapse__main__delta__21__receipts.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2023 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.
--
-- Originally licensed under the Apache License, Version 2.0:
-- <http://www.apache.org/licenses/LICENSE-2.0>.
--
-- [This file includes modifications made by New Vector Limited]
--
--
/* Copyright 2015, 2016 OpenMarket Ltd
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

create table if not exists receipts_graph (
	room_id text not null,
	receipt_type text not null,
	user_id text not null,
	event_ids text not null,
	data text not null,
	constraint receipts_graph_uniqueness unique (room_id, receipt_type, user_id)
);

create table if not exists receipts_linearized (
	stream_id bigint not null,
	room_id text not null,
	receipt_type text not null,
	user_id text not null,
	event_id text not null,
	data text not null,
	constraint receipts_linearized_uniqueness
		unique (room_id, receipt_type, user_id)
);

create index receipts_linearized_id on receipts_linearized (stream_id);
